css/main.css
/* ... */
.call-to-action-btn {
  border: none transparent;
  font-weight: 500;
  cursor: pointer;
  border-radius: 50px;
  color: white;
  padding: 15px 20px;
  margin-bottom: 20px;
  background: linear-gradient(350deg, #9356dc 0%, #ff79da 100%);
  -webkit-box-shadow: 9px 12px 15px -5px #c9c9c9;
  box-shadow: 9px 12px 15px -5px #c9c9c9;
  margin-top: 30px;
  transition: 2s;
}
.call-to-action-btn:hover {
  opacity: 0.8;
  box-shadow: 9px 12px 15px -5px #b0b0b0;
  transition: 0.75s;
}
.call-to-action-btn--menu-page {
  padding-right: 40px;
  padding-left: 40px;
}

@keyframes appears-gradually {
  from {
    opacity: 0;
    transform: translateY(15px);
  }
  to {
    opacity: 1;
    transform: translateY(0px);
  }
}
.loading-screen {
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  background-color: rgba(128, 128, 128, 0.8);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 10;
  animation: disappear 0s 3s forwards;
}
.loading-screen__logo {
  display: inline-block;
  width: 30px;
  height: 30px;
  position: relative;
  border: 4px solid white;
  animation: logo 2s infinite ease forwards;
}
.loading-screen__inner-logo {
  vertical-align: top;
  display: inline-block;
  width: 100%;
  background: linear-gradient(350deg, #9356dc 0%, #ff79da 100%);
  animation: inner-logo 2s infinite ease-in forwards;
}

@keyframes disappear {
  to {
    visibility: hidden;
    width: 0;
    height: 0;
  }
}
@keyframes logo {
  0% {
    transform: rotate(0deg);
  }
  25% {
    transform: rotate(180deg);
  }
  50% {
    transform: rotate(180deg);
  }
  75% {
    transform: rotate(360deg);
  }
  100% {
    transform: rotate(360deg);
  }
}
@keyframes inner-logo {
  0% {
    height: 0%;
  }
  25% {
    height: 0%;
  }
  50% {
    height: 100%;
  }
  75% {
    height: 100%;
  }
  100% {
    height: 0%;
    display: none;
  }
}
.header {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  z-index: 5;
}
.header--with-box-shadow {
  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.39);
  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.39);
  -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.39);
}
.header--menu-page {
  position: absolute;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: white;
}

.footer {
  color: white;
  background-color: #333333;
  font-weight: 300;
  font-size: 20px;
  padding: 20px;
}
.footer__center-wrapper {
  max-width: 1200px;
  margin: auto;
}
.footer__logo {
  margin-bottom: 35px;
}
.footer ul {
  list-style: none;
  padding: 0;
}
.footer__list-item--medium-font {
  font-weight: 500;
}
.footer li {
  margin: 20px 0px;
}
.footer li a {
  color: white;
}
.footer li i {
  margin-right: 10px;
  width: 20px;
}

@media (min-width: 768px) {
  .footer__center-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
  }
}
.short-presentation-section {
  position: relative;
  z-index: 1;
  display: flex;
  flex-direction: column;
  height: 100vh;
  max-height: 375px;
  text-align: center;
}
.short-presentation-section__location {
  flex: 1;
  background-color: #e5e5e5;
  text-align: center;
  padding: 20px;
  font-weight: 500;
  color: #424242;
}
.short-presentation-section__location i {
  margin-right: 10px;
}
.short-presentation-section__text {
  background-color: #f2f2f2;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  flex: 20;
  padding: 15px;
}
.short-presentation-section__title {
  font-size: 30px;
  font-weight: 600;
}
.short-presentation-section__description {
  margin-top: 15px;
  font-size: 20px;
  font-weight: 300;
  color: #4d4d4d;
}

.list-items-section {
  padding: 30px 15px;
}
.list-items-section--menu-page-version {
  padding: 25px 0;
}
.list-items-section--background-color {
  background-color: #f2f2f2;
}
.list-items-section__title {
  font-size: 30px;
  font-weight: 600;
  margin-bottom: 15px;
}
.list-items-section__title--light {
  font-size: 20px;
  font-weight: 300;
  color: #4d4d4d;
  position: relative;
}
.list-items-section__title--light:after {
  content: "";
  width: 48px;
  position: absolute;
  bottom: -10px;
  left: 0;
  border: solid 2px #99e2d0;
}

.list-items-wrapper {
  padding: 0;
  list-style: none;
  margin-left: 10px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
.list-items-wrapper--menu-page-version {
  margin: 0;
}

.menu-page {
  display: flex;
  flex-direction: column;
}
.menu-page__picture-wrapper {
  transform: translateY(50px);
  height: 500px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.menu-page__picture {
  width: 100%;
  display: block;
  object-fit: cover;
}

.menu {
  padding: 30px 15px 50px 15px;
  background-color: #f2f2f2;
  border-radius: 40px 40px 0% 0%;
  max-width: 600px;
  z-index: 4;
  max-width: 100%;
  max-width: 900px;
}
.menu__header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

@media (min-width: 768px) {
  .menu-page__picture {
    border-radius: 20px;
    height: 100%;
  }

  .menu {
    margin-left: auto;
    margin-right: auto;
  }
}

/*# sourceMappingURL=main.css.map */

